<resources>
    <string name="app_name">Manager Finansów</string>
    <string name="list_graph_switcher">Przełącz pomiędzy listą a wykresem</string>
    <string name="add_new_transaction">Dodaj nową transakcję</string>
    <string name="title_activity_add_transaction">Dodaj nową transakcję</string>
    <string name="title_activity_modify_transaction">Aktualizuj transakcję</string>
    <string name="add_transaction_action_share">Udostępnij</string>
    <string name="all_transaction_list_tab">Lista</string>
    <string name="month_transaction_graph_tab">Wykres</string>

    <string name="category_indicator">Indykator kategorii</string>
    <string name="value_label">Kwota:</string>
    <string name="date_label">Data:</string>
    <string name="category_label">Kategoria:</string>
    <string name="description_label">Opis:</string>
    <string name="expense_label">Wydatek</string>
    <string name="income_label">Przychód</string>

    <string name="summary_current_month_text">%s %d</string>
    <string name="month_summary_label">Miesiąc:</string>
    <string name="income_summary_label">Uznania:</string>
    <string name="expenses_summary_label">Wydatki:</string>
    <string name="balance_summary_label">Saldo:</string>
    <string name="apply_transaction_description">Zatwierdź daną transakcję</string>
    <string name="switch_view_description">Przełącz widok listy i wykresu</string>
    <string name="main_activity_bottom_panel_switcher_description">Przełącznik pomiędzy widokiem listy transakcji a wykresem miesięcznym</string>
    <string name="minus_sign">-</string>
    <string name="balance_graph_unavailable_message">Wykres jest dostępny dla miesięcy z transakcjami wprowadzonymi co najmniej w dwóch różnych dniach.</string>
</resources>