<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainactivity.MainActivity" >

    <com.google.android.material.chip.Chip
        android:id="@+id/summaryCurrentMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:contextClickable="false"
        android:linksClickable="false"
        android:longClickable="false"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMainActivityBottomPanelSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:clickable="true"
        android:src="@drawable/ic_balance_chart"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summaryCurrentMonth"
        android:contentDescription="@string/main_activity_bottom_panel_switcher_description" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/fabMainActivityBottomPanelSwitcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summaryCurrentMonth">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/income_summary_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/minus_sign"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/transparent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/summaryCurrentIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/balance_positive"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/expenses_summary_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/minus_sign"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/transparent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/summaryCurrentExpenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/balance_negative"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/balance_summary_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/summaryBalanceSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/minus_sign"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/transparent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/summaryCurrentBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:id="@+id/mainActivityBottomContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" >

    </FrameLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>